# bernstein

./: bernstein.cabal  bld.sh
bib/: farouki.bib
src/Numeric/Polynomial/: Bernstein.lhs
